--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/732/732228.png">
-    <title>Stream Hub</title>
+    <title>Netflix India -Watch TV Shows Online, Watch Movies Online</title>
 </head>
 
 <body>
