--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/732/732228.png">
+        <link rel="icon" href="Assets/favicon (1).ico">
     <title>Netflix India -Watch TV Shows Online, Watch Movies Online</title>
 </head>
 
