--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <select class="lang btn">
 
                     <option><img class="lang-logo" src="Assets/translate.png" alt="">English</option>
-                    <option>हिन्दी</option>
+                    <option style="background-color: transparent;">हिन्दी</option>
                 </select>
 
                 <button class="signin btn">Sign In</button>
@@ -76,7 +76,12 @@
         <div class="con-img2">
             <img class="img2"
                 src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
-
+                <div class="box2" >
+                     <div><img  class="box-img" src="Assets/boxshot.png" alt=""></div>
+                    <div><p>Stranger Things <br>
+                    <span >Downloading...</span> </p></div>
+                    <div class="bg"> </div>
+                    </div>
 
         </div>
         <div class="con-text2">
