--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                      <div><img  class="box-img" src="Assets/boxshot.png" alt=""></div>
                     <div><p>Stranger Things <br>
                     <span >Downloading...</span> </p></div>
-                    <div class="bg"> </div>
-                    </div>
+                    <div class="bg"> <img class="bg-img" src="Assets/download-icon.gif" alt=""></div>
+                </div>
 
         </div>
         <div class="con-text2">
