--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="H3H9eSV32X2atL5QlWdO3KREfeAXT13t5PVM-N_OqFk" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--     <link rel="stylesheet" href="Netflix.css"> -->
+    <link rel="stylesheet" href="Netflix.css">
     <link rel="icon" href="Assets/favicon (1).ico">
     <title>Netflix India -Watch TV Shows Online, Watch Movies Online</title>
 </head>
