--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <option>हिन्दी</option>
                 </select>
                 <img class="lang-logo" src="Assets/translate.png" alt="select language">
-                <button class="signin btn">Sign In</button>
+                <a href="https://paras-verma7454.github.io/Netflix-login/" target="_blank"> <button class="signin btn">Sign In</button></a>
 
             </div>
         </nav>
