--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div>
                 <form class="form">
-                    <input type="email" placeholder="Email address">
+                    <input type="email" placeholder="Email address" required>
                     <span> <button class="submit btn" type="submit">Get Started &gt;</button></span>
                 </form>
             </div>
@@ -183,7 +183,7 @@
 
             <div>
                 <form class="form">
-                    <input type="email" placeholder="Email address">
+                    <input type="email" placeholder="Email address" required>
                     <span> <button class="submit btn" type="submit">Get Started &gt;</button></span>
                 </form>
             </div>
