--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div>
                 <form class="form">
                     <input type="email" placeholder="Email address" required>
-                    <span> <button class="submit btn" type="submit">Get Started &gt;</button></span>
+                    <span> <button class="submit btn" type="button">Get Started &gt;</button></span>
                 </form>
             </div>
 
@@ -184,7 +184,7 @@
             <div>
                 <form class="form">
                     <input type="email" placeholder="Email address" required>
-                    <span> <button class="submit btn" type="submit">Get Started &gt;</button></span>
+                    <span> <button class="submit btn" type="button">Get Started &gt;</button></span>
                 </form>
             </div>
 
